# Posts

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
docs/: technical_specification.md
src/: manage.py
src/fixtures/posts/: fixture_posts.json
src/posts/: admin.py  apps.py  context_processors.py  forms.py  models.py  urls.py  utils.py  views.py
src/posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_posts_options_posts_post_is_publ_c738d1_idx.py
src/posts/static/posts/css/: styles.css
src/posts/templates/posts/: about.html  add_post.html  delete_post.html  feedback.html  index.html  list_categories.html  list_tags.html  posts.html
src/posts/templatetags/: custom_tags.py  posts_tags.py
src/siteposts/: asgi.py  settings.py  urls.py  wsgi.py
src/static/admin/css/: admin.css
src/static/forms/css/: general_form.css
src/templates/: base.html  form_general.html
src/templates/admin/: base_site.html
src/users/: authentication.py  forms.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py
src/users/templates/users/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html  profile.html  register.html
